--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "Roblox WS Execution",
   "description": "Code Exection from VSC from any Executor.",
   "publisher": "incognito-developer",
-  "version": "1.5.0",
+  "version": "1.5.1",
   "engines": {
     "vscode": "^1.81.0"
   },
@@ -56,6 +56,7 @@
     "@types/express-ws": "^3.0.1",
     "express": "^4.18.2",
     "express-ws": "^5.0.2",
+    "helmet": "^7.0.0",
     "vsce": "^2.15.0",
     "websocket": "^1.0.34"
   }
