--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "displayName": "Roblox WS Execution",
   "description": "Code Exection from VSC from any Executor.",
   "publisher": "incognito-developer",
-  "version": "1.5.2",
+  "version": "1.5.5",
+  "icon": "WS.png",
   "engines": {
     "vscode": "^1.81.0"
   },
